add img tags to show images in the webpage

--- a/index.html
+++ b/index.html
@@ -14,57 +14,65 @@
     <div class="top-content">
         <div class="header">
             <div class="header-text">
-                Header Logo
+                <!--Header Logo-->
+                <img class="img-6" src="images/img-6.jpg" width="50" height="50" alt="Logo" style="border-radius: 15px">
+
             </div>
             <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="#">Sign up</a></li>
+                <li><a href="#">Explore</a></li>
+                <li><a href="#">Contact us</a></li>
             </ul>
         </div>
         <div class="after-header">
             <div class="top-content-left">
                 <div class="left-content">
                     <div class="left-content-title">
-                        <p>This website is awesome</p>
+                        <p>Nature is so awesome</p>
                     </div>
                     <div class="left-content-info">
-                        <p>This website has some subtext that goes here under the main title. It is a smaller font and the color is lower constrast</p>
+                        <p>This website offers you the oportunity to see beautiful places, so you can plan your future vacations and enjoy life</p>
                     </div>
                 </div>
                 <button type="button">Sign up</button>
             </div>
             <div class="top-content-right">
-                <p>this is a placeholder for an image</p>
+                <!--<p>this is a placeholder for an image</p>-->
+                <img class="img-1" src="images/river-waterfall-colombia.jpg" width="600" height="300" alt="8th-marvel">
             </div>
         </div>
     </div>
     <div class="main-content">
         <div class="first-level">
-            <h2>Some random information.</h2>
+            <h2>Some places you might love to visit.</h2>
             <div class="squares-block">
                 <div class="square-container">
-                    <div class="square"></div>
+                    <!--<div class="square">-->
+                    <img class="img-2" src="images/img-2.jpg">
+                    <!--</div>-->
                     <div class="under-square-text">
-                        <p>This is some subtext under an illustration or image</p>
+                        <p>Rocky mountains surround a magical pool</p>
                     </div>
                 </div>
                 <div class="square-container">
-                    <div class="square"></div>
+                    <!--<div class="square"></div>-->
+                    <img class="img-3" src="images/img-3.jpg">
                     <div class="under-square-text">
-                        <p>This is some subtext under an illustration or image</p>
+                        <p>Maybe you prefer some sun and beach</p>
                     </div>
                 </div>
                 <div class="square-container">
-                    <div class="square"></div>
+                    <!--<div class="square"></div>-->
+                    <img class="img-7" src="images/img-7.jpg">
                     <div class="under-square-text">
-                        <p>This is some subtext under an illustration or image</p>
+                        <p>What about a mystical, colorful river </p>
                     </div>
                 </div>
                 <div class="square-container">
-                    <div class="square"></div>
+                    <!--<div class="square"></div>-->
+                    <img class="img-9" src="images/img-9.jpg">
                     <div class="under-square-text">
-                        <p>This is some subtext under an illustration or image</p>
+                        <p>We know you'd love a beautiful green mistery</p>
                     </div>
                 </div>
 
@@ -74,11 +82,11 @@
             <div class="text-container">
                 <div class="second-level-text">
                     <p>
-                        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+                        Don't dream it, just live it as I did. I had the pleasure of visiting an extraordinary place in earth and I know will be back next year. I really had the time of my life.
                     </p>
                 </div>
                 <div class="text-signature">
-                    <p>-Thor, God of Thunder</p>
+                    <p>-John "Traveler" Doe</p>
                 </div>
             </div>
         </div>
@@ -89,7 +97,7 @@
                         <p>Call to action! It's time!</p>
                     </div>
                     <div class="last-box-info">
-                        <p>Sign up for our product by clicking that button over there!</p>
+                        <p>Sign up by clicking that button over there!</p>
                     </div>
                 </div>
                 <button class="btn">Sign up</button>
@@ -97,7 +105,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>Copyright © The Odin Project 2022</p>
+        <p>All rights reserved 2022</p>
     </div>
 </body>
 
